fix spacing of components in App-main to 100px

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ font-family: 'Merriweather', serif;
 .homeDiv,
 .portfolioDiv,
 .techstackDiv {
-  margin-top: 150px;
+  margin-top: 100px;
   width: 90%;
   /* height: 85vh; */
 }
